--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jest": "^27.3.1",
+    "mocha": "^9.1.3",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4"
   }
 }
