Improved Syntax for Workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Backend Testing
 
 on:
   push:
@@ -21,22 +21,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+
     - name: Npm install
       working-directory: ./server
       run: npm install
+    
     - name: Docker Build Server
       working-directory: ./server
       run: docker build -t "api-server" .
+    
     - name: Docker Build Front-End
       working-directory: ./client
       run: docker build -t "react-app" .
+    
     - name: Docker Compose Up
       run: docker-compose up -d
+    
     - name: Npm test
       working-directory: ./server
       run: npm run test
