--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "jest": "^27.3.1",
     "mocha": "^9.1.3",
     "mongoose": "^6.0.12",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.4"
