--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: "3.8"
 
 services:
+
   api-server:
     image: api-server
     restart: always
-    ports:
-      - "5000:5000"
+    #ports:
+    #  - "5000:5000"
     networks:
       - mern-app
     depends_on:
@@ -35,6 +36,17 @@ services:
     depends_on:
       - api-server
     container_name: "react-app"
+
+  proxy:
+    image: nginx
+    depends_on:
+      - api-server
+    ports:
+      - "8000:80"
+    networks:
+      - mern-app
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
 
 networks:
   mern-app:
